flicker fix

--- a/escape/src/components/Room.css
+++ b/escape/src/components/Room.css
@@ -1065,6 +1065,7 @@
   transition: all 0.15s steps(3);
   opacity: 0;
 }
+
 .overlay.zoom {
   background: radial-gradient(
     circle,
@@ -1084,6 +1085,37 @@
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.3s ease;
+}
+
+/* Flickering lights */
+#room.lights-glitch {
+  position: relative;
+    height: 100vh;
+    width: 100%;
+    padding: 0;
+    overflow: hidden;
+    position: fixed;
+    align-content: center;
+    top: 0;
+    left: 0;
+    background-color: var(--color-bg-deep);
+}
+
+/* lights flickering */
+#room.lights-glitch::after {
+  content: "";
+  position: absolute;
+  top: 50% !important;
+  left: 50% !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  width: 100vw !important;
+  height: 100vh !important;
+  background: var(--color-bg-light);
+  opacity: 0;
+  pointer-events: none;
+  z-index: 99999;
+  animation: lightFlicker 1.5s ease-in-out forwards;
 }
 
 /* lights off*/
@@ -1213,15 +1245,13 @@
 }
 
 @keyframes lightFlicker {
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
-    opacity: 1;
-  }
-  20%, 24%, 55% {
-    opacity: 0.2;
-  }
+  0%   { opacity: 0.6; }
+  20%  { opacity: 1; }
+  40%  { opacity: 0.7; }
+  60%  { opacity: 1; }
+  80%  { opacity: 0.8; }
+  100% { opacity: 1; }
 }
 
-.flicker {
-  animation: lightFlicker 1s linear forwards;
-}
+
 
